SSG packaging separation. Look out below!!
anything that is related to the appliance is now in UneasyRooster/etc/appliance

the build (dist or official build) builds two rpms, a ssg software only one and an appliance one.

git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@17642 219f1c6e-4a0e-43c8-96f2-6e749be13fd4